--- a/Bodega/Bodega.csproj
+++ b/Bodega/Bodega.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.1.0" />
+  </ItemGroup>
+
 </Project>
